--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.11.0",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -53,6 +54,7 @@
     "i": "^0.3.7",
     "input-otp": "1.4.1",
     "jquery": "^3.7.1",
+    "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.454.0",
     "mammoth": "^1.9.1",
