--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
+    "@formspree/react": "^3.0.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
@@ -50,6 +51,7 @@
     "docx-preview": "^0.3.5",
     "embla-carousel-react": "8.5.1",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.23.9",
     "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.10.3",
     "i": "^0.3.7",
