--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "multer": "^2.0.1",
     "next": "^15.4.2",
     "next-themes": "latest",
+    "nodemailer": "^7.0.5",
     "npm": "^11.4.2",
     "pdf-lib": "^1.17.1",
     "pptx2html": "^0.3.4",
