--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "docx": "^9.5.1",
     "docx-preview": "^0.3.5",
     "embla-carousel-react": "8.5.1",
     "formidable": "^3.5.4",
@@ -67,6 +68,7 @@
     "nodemailer": "^7.0.5",
     "npm": "^11.4.2",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.54",
     "pptx2html": "^0.3.4",
     "react": "^19.1.0",
     "react-day-picker": "8.10.1",
